Overflow fix

--- a/SpaceTourismWebsite/src/sass/_landingPage.scss
+++ b/SpaceTourismWebsite/src/sass/_landingPage.scss
@@ -42,6 +42,8 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-end;
+	width: 100%;
+	height: 100%;
 }
 
 .left {
