--- a/SpaceTourismWebsite/src/sass/style.scss
+++ b/SpaceTourismWebsite/src/sass/style.scss
@@ -19,11 +19,10 @@ body {
 
 .section{
 	position: absolute;
-	left: -100%;
+	left: -120%;
 	top: 0;
 	height: 100%;
-	width: 100vw;
-	min-height: 900px;
+	width: 100%;
 	transition: left 0.5s ease;
 
 	&--active{
